# sprite_unpack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml  python-package.yml
sprite_unpack/: cli.py  image.py  image_boxes.py  sprite_sheet.py  types.py
